# ring-modulator

./: CMakeLists.txt  readme.md
mac/: Info.plist  ringModulatorPrefix.pch
resource/: ringModulator.rc
source/: Debugger.cpp  Debugger.h  OnePole.cpp  OnePole.h  Oscillator.cpp  Oscillator.h  factory.cpp  ringModulatorController.cpp  ringModulatorController.h  ringModulatorIDs.h  ringModulatorProcessor.cpp  ringModulatorProcessor.h  version.h
